--- a/app/partials/clientprojects.html
+++ b/app/partials/clientprojects.html
@@ -141,7 +141,7 @@
                                                         <td class="project-actions">
                                                             <button type="button" class="btn btn-white btn-sm" ng-click="openAddprojectModelFromclient(project)"><i class="fa fa-pencil"></i> </button>
                                                             <button type="button" class="btn btn-white btn-sm" ng-click="openAddMember(project)"><i class="fa fa-users"></i> </button>
-                                                            <a href="project-fxw.html" class="btn btn-default btn-sm" target="_blank"><i class="fa fa-sign-in"></i></a>
+                                                            <a href="#/pdetails?project_id={{project.id}}" class="btn btn-default btn-sm" target="_self"><i class="fa fa-sign-in"></i></a>
                                                         </td> 
                                                     </tr>
 
