--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -53,8 +53,8 @@
                                 <!-- <button class="btn btn-default btn-bitbucket btn-m mr5" type="button" data-target="#budgetlimit" data-toggle="modal" ng-if="isclient"><i class="fa fa-thumb-tack mr5" ></i> budgetlimit</button> -->
                                 <button class="btn btn-default btn-bitbucket btn-m mr5" type="button" ng-click="openKeybox()"><i class="fa fa-lock mr5"></i> keybox</button>
                                 <a ng-if="!isclient" class="btn btn-default btn-bitbucket btn-m mr5" href="https://fxw.slack.com/" target="_blank"><i class="fa fa-slack mr5" ></i> slack</a>
-                                <a class="btn btn-default btn-bitbucket btn-m mr5" href="https://www.pivotaltracker.com/n/projects/928534" target="_blank" ng-if="!isclient"><i class="fa fa-circle-o mr5"></i> pivotal</a>
-                                <a class="btn btn-default btn-bitbucket btn-m mr5" href="https://github.com/mahdinjim/crmtool/commits/master" target="_blank" ng-if="!isclient"><i class="fa fa-github mr5"></i> github</a>
+                                <a class="btn btn-default btn-bitbucket btn-m mr5" href="https://www.pivotaltracker.com/" target="_blank" ng-if="!isclient"><i class="fa fa-circle-o mr5"></i> pivotal</a>
+                                <a class="btn btn-default btn-bitbucket btn-m mr5" href="https://github.com" target="_blank" ng-if="!isclient"><i class="fa fa-github mr5"></i> github</a>
                             </div>
                           
                             
