--- a/app/partials/nav-menu.html
+++ b/app/partials/nav-menu.html
@@ -6,7 +6,7 @@
                     </div>
                     <ul class="nav navbar-top-links navbar-right">
 
-                         <li class="key-account fright" ng-if="isclient"> 
+                         <li class="key-account fright" ng-if="showcontact"> 
                             <a data-toggle="modal" data-target="#key-account">
                                 <div class="ka-image"><img src="{{keyaccount.photo}}" class="img-circle" alt="image" width="35" heigth="35"></div>
                                 <div class="ka-name">
