--- a/app/partials/client.html
+++ b/app/partials/client.html
@@ -50,8 +50,8 @@
                     <div class="ibox">
                         <div class="ibox-content">
 
-                             <input type="text" class="form-control input-sm m-b-xs" id="filter"
-                                   placeholder="Search in table" ng-if="!isadmin">
+                            <!--  <input type="text" class="form-control input-sm m-b-xs" id="filter"
+                                   placeholder="Search in table" ng-if="!isadmin"/> -->
 
                             <table class="footable table table-stripped" data-page-size="10" data-filter=#filter ng-if="!isadmin">
                                 <thead>
@@ -66,10 +66,10 @@
                                     <th data-hide="phone" class="text-right" width="250" data-sort-ignore="true">Action</th>
                                 </tr>
                                 </thead>
-                                <tbody ng-repeat="client in customers">
+                                <tbody>
 
                                     <!--customer item-->
-                                    <tr>
+                                    <tr  ng-repeat="client in customers">
                                         <td>
                                            {{client.id}}
                                         </td>
@@ -87,7 +87,7 @@
                                         </td>
                                         <td>
                                             <span class="label label-primary"><i class="fa fa-clone"></i>{{client.projectNumber}}</span>
-                                            <span class="label label-default"><i class="fa fa-square-o"></i> 38</span>
+                                            <span class="label label-default"><i class="fa fa-square-o"></i> {{client.ticketnumber}}</span>
                                         </td>
                                          <td>
                                             <span class="label label-default"><i class="fa fa-users"></i> {{client.userNumber}}</span>
@@ -95,14 +95,13 @@
                                         <td class="text-right">
                                              <div class="btn-table-mobile">
                                                 <button class="btn btn-white btn-bitbucket btn-sm" type="button" ng-click="OpenCreateModal(client)"><i class="fa fa-pencil"></i> Edit</button>
-                                                <button class="btn btn-white btn-bitbucket btn-sm" type="button"><i class="fa fa-users"></i> Users</button>
-                                                <button class="btn btn-white btn-bitbucket btn-sm" type="button"><i class="fa fa-clone"></i> Projects</button>
+                                                
                                             </div>
                                         </td>
                                     </tr>
 
                                 </tbody>
-                                <tfoot>
+                                <!-- <tfoot>
                                 <tr>
                                     <td colspan="8">
                                         <ul class="pagination pagination-sm pull-right" ng-repeat="page in pagecount">
@@ -123,7 +122,7 @@
                                         </ul>
                                     </td>
                                 </tr>
-                                </tfoot>
+                                </tfoot> -->
                             </table>
                             <table class="table table-hover" ng-if="isadmin">
                                 <tbody>
