add estimation times

--- a/app/partials/stories.html
+++ b/app/partials/stories.html
@@ -564,9 +564,13 @@
                                 <div class="select-option m0" style="width:100%;">
                                     <select class="select2" ng-model="estimation" id="selectest">
                                         <option selected="selected" >Select</option>
+                                        <option value="0.5">0.5 h</option>
                                         <option value="1">1 h</option>
+                                        <option value="1.5">1.5 h</option>
                                         <option value="2">2 h</option>
+                                        <option value="2.5">2.5 h</option>
                                         <option value="3">3 h</option>
+                                        <option value="3.5">3.5 h</option>
                                         <option value="4">4 h</option>
                                     </select>
                                 </div>
