fix developer add story to bug

--- a/app/partials/stories.html
+++ b/app/partials/stories.html
@@ -180,7 +180,7 @@
                                                <div class="col-lg-12 project-status p5 aright" ng-if="ticket_status==ticketStatus.Draft.status">
                                                     <span class="label label-default label-nobg"><i class="fa fa-genderless"></i> draft</span>
                                                 </div>
-                                                <div class="col-lg-12 project-status p5 aright" ng-if="ticket_status==ticketStatus.Estimation.status && ticket_type!=tickettypes[2].type">
+                                                <div class="col-lg-12 project-status p5 aright" ng-if="ticket_status==ticketStatus.Estimation.status">
                                                    <button class="btn btn-primary btn-bitbucket btn-xs" type="button" ng-click="addStory(null)"><i class="fa fa-plus mr5"></i> add story</button>
                                                     <small>client started ticket</small>
                                                 </div>
