--- a/app/partials/clientprojects.html
+++ b/app/partials/clientprojects.html
@@ -1,7 +1,4 @@
- <!-- select2 -->
-    <script>
-        $('.select2').select2();
-    </script>
+
 <div id="wrapper">
  	 <div side-bar></div>
 
@@ -275,7 +272,7 @@
                          <textarea class="form-control textarea-keybox" placeholder="Description" ng-model="apdescription"></textarea>
                     </div>
                     <div class="form-group mb0">
-                        <select data-placeholder="Select Skills" class="chosen-select" multiple style="width:100%;" tabindex="2" ng-model="aprojectskills" id="apskillsselct">
+                        <select data-placeholder="Select Skills" class="select2 chosen-select" multiple style="width:100%;" tabindex="2" ng-model="aprojectskills" id="apskillsselct">
                             <optgroup label="OOP">
                                 <option value="PHP">PHP</option>
                                 <option value="Java">Java</option>
