--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -79,7 +79,7 @@
                                 <div class="project-people">
                                     <!--<a href="" class="fxwlink-member" data-toggle="modal" data-target="#add-member"><small><i class="fa fa-plus"></i> add member</small></a>-->
                                     <div class="project-status" style="margin-top:7px;">
-                                        <span class="label label-default label-nobg"><img  class="progress-loading" width="15" height="15" src="img/ellipsis.gif"> team building in progress</span>
+                                        <span class="label lerabel-default label-nobg"><img  class="progress-loading" width="15" height="15" src="img/ellipsis.gif"> team building in progress</span>
                                     </div>
                                 </div>
                             </div>
@@ -452,7 +452,7 @@
                         <div class="col-lg-12 p15" style="background-color: #1ab394;">
                             <div class="form-group fleft m0 mr10">
                                 <div class="select-option m-0" style="width: 360px;">
-                                    <select  ng-model="addedmember" id="selectdevmember" ng-options="[member.name,' ',member.surname,', ',member.role.Text].join('') for member in devteammembers track by member.order">
+                                    <select  class="select2" ng-model="addedmember" id="selectdevmember" ng-options="[member.name,' ',member.surname,', ',member.role.Text].join('') for member in devteammembers track by member.order">
                                        
                                        
                                     </select>
